# wc

./: LICENSE  README.md  main.py  pyproject.toml  test.py  test_main.py
app/src/: ArgumentParser.java  Main.java
app/src/FlagHandler/: CFlagHandler.java  FlagHandler.java
